--- a/style.css
+++ b/style.css
@@ -1,30 +1,10 @@
-:root {
-  font-family: "Roboto", sans-serif;
-  --background--dark: #1f2937;
-}
-
-body {
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   padding-top: 16px;
   padding-bottom: 16px;
-}
-
-#logo {
-  font-size: 24px;
-  font-weight: bold;
-  color: #f9faf8;
-
-  margin: 0;
 }
 
 nav {
@@ -40,49 +20,21 @@ section {
 
 header,
 #hero {
-  background-color: var(--background--dark);
-  color: white;
-}
-
-a,
-#hero p {
-  font-size: 18px;
-  color: #e5e7eb;
-  text-decoration: none;
+  background-color: #1f2937;
 }
 
 #hero {
-  padding-top: 128px;
-  padding-bottom: 128px;
-
   display: flex;
   gap: 64px;
+
+  padding-top: 128px;
+  padding-bottom: 128px;
 }
 
 #hero p {
   margin: 8px 0;
 }
 
-#hero > img {
-  width: 100%;
-  height: auto;
+#hero img {
   border-radius: 16px;
-}
-
-h1 {
-  margin: 0;
-  font-size: 48px;
-  font-weight: 900;
-  color: #f9faf8;
-  text-wrap: pretty;
-}
-
-button {
-  background-color: #3882f6;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  padding: 12px 32px;
-  font-size: 20px;
-  font-weight: 600;
 }
